--- a/css/hover.css
+++ b/css/hover.css
@@ -53,3 +53,44 @@
 .ex-5-square:active {
     transform: scale(0.5);
   }
+
+/* 6 */
+
+.ex-6-img:hover {
+    filter: grayscale(100%);
+}
+
+/* 7 */
+
+.ex-7-img {
+    transition: 3s;
+} 
+
+.ex-7-img:hover {
+    filter: grayscale(100%) brightness(50%);
+}
+
+/* 8 */
+
+.ex-8-img {
+    border: 1px solid red;
+    transition: 2s;
+} 
+
+.ex-8-img:hover{
+    border-radius: 25%;
+}
+
+/* 9 */
+
+.ex-9-img {
+    border: 1px solid red;
+    transition: 5s;
+} 
+
+.ex-9-img:hover {
+    border-radius: 25%;
+    transform: scale(0.4);
+    opacity: 0.8;
+    transition: 1s;
+}
