--- a/css/hover.css
+++ b/css/hover.css
@@ -94,3 +94,83 @@
     opacity: 0.8;
     transition: 1s;
 }
+
+/* 10 */
+
+.ex-10-icon {
+    animation: spin 1s linear infinite;
+} 
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+      to {
+        transform: rotate(360deg);
+    }
+}
+
+/* 11 */
+
+.ex-11-icon {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+      to {
+        transform: rotate(360deg);
+    }
+}
+
+.ex-11-icon:hover {
+    animation: spin-hover 1s ease-in-out;
+}
+
+@keyframes spin-hover {
+    0% {
+      transform: rotate(0deg);
+    }
+    85% {
+      transform: rotate(300deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+}
+
+/* 12 */
+
+.ex-12-button:hover .ex-12-top-white {
+    animation: moveTopWhite 2s linear;
+}
+@keyframes moveTopWhite {
+    0% {
+        left: 10%;
+    }
+    50% {
+        left: calc(100% - 60px);
+    }
+    100% {
+        left: 10%;
+    }
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: moveBottomWhite 2s linear;
+}
+@keyframes moveBottomWhite {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: calc(100% - 60px);
+    }
+    100% {
+        right: 20%;
+    }
+}
+
+/* 13 */
